<resources>
    <string name="app_name">VoiceModulation</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="playback_rate">Playback Rate</string>
    <string name="encoding">Encoding</string>
    <string name="format">Format</string>
    <string name="selected_format">.wav</string>
    <string name="selected_sample_rate">48000 F/s</string>
    <string name="selected_encoding">16Bit</string>
    <string name="selected_playback_rate">48000 F/s</string>
    <string name="num_channels">Channels</string>
    <string name="selected_num_channels">Mono</string>
    <string name="record_title">Record Controls</string>
    <string name="project_name">Project Name</string>
    <string name="new_name">new name</string>
    <string name="delay">Delay</string>
    <string name="amplitude">Amplitude</string>
    <string name="wet">Wet</string>
    <string name="freq">Frequency</string>
    <string name="amp">Amp</string>
    <string name="theta">θ</string>
    <string name="hz">Hz</string>
    <string name="carrier_amp">Carrier Amp</string>
    <string name="modulator_amp">Modulator Amp</string>
    <string name="title_theta">Theta</string>
    <string name="s">s</string>
    <string name="record_controls">Record Controls</string>
    <string name="flanger_sine_title">Flanger with Sine Wave</string>
    <string name="volume">Volume</string>
    <string name="backwards_title">Backwards Effect</string>
    <string name="echo_title">Echo Effect</string>
    <string name="quantize">Quantize</string>
    <string name="quantize_title">Quantize Audio Sample</string>
    <string name="phaser_sine_title">Phaser with Sine Wave</string>
    <string name="phaser_triangle_title">Phaser with Triangle Wave</string>
    <string name="phaser_square_title">Phaser with Square Wave</string>
    <string name="phasor_saw_title">Phaser with Saw Wave</string>
    <string name="flanger_triangle_title">Flanger with Triangle Wave</string>
    <string name="flanger_square_title">Flanger with Square Wave</string>
    <string name="flanger_saw_title">Flanger with Saw Wave</string>
    <string name="low_pass_title">Low Pass Filter</string>
    <string name="smoothing">Smoothing</string>
    <string name="robot_title">Robot Effect</string>
    <string name="robotness">Robotness</string>
    <string name="currently_recording">Currently Recording</string>
    <string name="nothing_to_undo">Nothing to undo</string>
    <string name="undo_pressed">Undo pressed</string>
    <string name="redo_pressed">Redo pressed</string>
    <string name="nothing_to_redo">Nothing to redo</string>
    <string name="already_open">This project is already open</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="export">Export</string>
    <string name="default_title">title</string>
    <string name="default_status">status</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
</resources>