<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    tools:context=".MainActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="409dp"
        android:layout_height="425dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="101dp"
        android:background="#605B5B"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/stop_recording"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="clip_horizontal|center"
            android:onClick="onClick"
            android:scaleType="center"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/start_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onClick"
            android:scaleType="center"
            app:srcCompat="@android:drawable/ic_btn_speak_now" />

        <ImageButton
            android:id="@+id/play_recording"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:onClick="onClick"
            android:scaleType="center"
            app:srcCompat="@android:drawable/ic_menu_send" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="411dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:background="#605B5B"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/format" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/encoding" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/playback_rate" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_rate" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="411dp"
        android:layout_height="105dp"
        android:layout_marginBottom="8dp"
        android:background="#605B5B"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/format"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:max="2"
            android:progress="2"
            android:rotation="-90" />

        <SeekBar
            android:id="@+id/encoding"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:max="2"
            android:progress="1"
            android:rotation="-90" />

        <SeekBar
            android:id="@+id/playback_rate"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:max="10"
            android:min="1"
            android:progress="10"
            android:rotation="-90" />

        <SeekBar
            android:id="@+id/sample_rate"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:forceDarkAllowed="false"
            android:max="10"
            android:min="1"
            android:progress="10"
            android:rotation="-90" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="415dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="#605B5B"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/selected_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="@string/selected_format" />

        <TextView
            android:id="@+id/selected_encoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_encoding" />

        <TextView
            android:id="@+id/selected_playback_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_playback_rate" />

        <TextView
            android:id="@+id/selected_sample_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_sample_rate" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>